# dmt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
docs/: contexts.md
src/: datasources.rs  lib.rs  sysinfo.rs
tests/complex/: complex.out.dmt.tpl  variables.dmt.ctx
tests/csv/: csvtest.out.dmt.tpl  servers.host.dmt.csv
tests/custom/: custom.out.dmt.tpl  custom.yml
tests/legacy/: default.yml  legacy.out.orig.tpl  local.yml
tests/precedence/: a.dmt.ctx  b.dmt.ctx  default.yml  local.yml  precedence.out.dmt.tpl
tests/pwd/: pwd.out.dmt.tpl
