[package]
authors = ["Stephan Buys <hello@stephanbuys.com>"]
name = "dmt"
version = "0.1.1"

[dependencies]
csv = "1.0.0-beta.5"
env_logger = "0.4.3"
error-chain = "0.11.0"
failure = "0.1.0"
failure_derive = "0.1.0"
glob = "0.2.11"
log = "0.3.8"
regex = "0.2.2"
serde = "1.0.19"
serde_derive = "1.0.24"
serde_yaml = "0.7.1"
tera = "0.11.0-beta.1"
